# figure-game-solver

./: Cargo.toml  README.md  config.toml
lib/: error.rs  evolve.rs  game.rs  lib.rs  solve.rs
src/: main.rs
